Fix input shrinking on mobile devices and Update github repo url

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,7 +17,7 @@
 
 .main .input {
   border: none;
-  height: 130px;
+  min-height: 130px;
   border-radius: 8px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   padding: 8px 16px;
